--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>This is fake</title>
-  <meta property="og:title" content="토~일 저녁 8시~10시!                 
-  ★주말최강전 START★                
-  밴리스트가 있어서 진짜 실력 대결!     ">
+  <meta property="og:title" content="토~일 저녁 8시~10시! ★주말최강전 START★ 밴리스트가 있어서 진짜 실력 대결!     ">
   <meta property="og:image" content="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.0-9/131416156_3551218594998115_5191625280874842101_n.jpg?_nc_cat=109&ccb=2&_nc_sid=730e14&_nc_ohc=6r6CThyoZysAX-oi_Uk&_nc_ht=scontent-ssn1-1.xx&oh=963d3d4ef34f67071b3dea9fead8a782&oe=60124CEB">
   <meta property="og:description" content="★모마 접속하기★">
   <script src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/xmas/snow.js"></script>
